[tool.poetry]
name = "llm-teaching-assistant"
version = "0.1.0"
description = ""
authors = ["Mike Nawrocki <michal.m.nawrocki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
